target/kubernetes/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 6a98a5ecf56f66c012861a8ea0d148b98234e1b1
    app.quarkus.io/build-timestamp: 2023-03-06 - 14:42:11 +0000
  labels:
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: quarkuslabs-services
  name: quarkuslabs-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
      app.kubernetes.io/name: quarkuslabs-services
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 6a98a5ecf56f66c012861a8ea0d148b98234e1b1
        app.quarkus.io/build-timestamp: 2023-03-06 - 14:42:11 +0000
      labels:
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: quarkuslabs-services
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
            - name: JAVA_OPTIONS
              value: ""
          image: hehernandez/quarkuslabs-services:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: quarkuslabs-services
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 6a98a5ecf56f66c012861a8ea0d148b98234e1b1
    app.quarkus.io/build-timestamp: 2023-03-06 - 14:42:11 +0000
  labels:
    app.kubernetes.io/name: quarkuslabs-services
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: quarkuslabs-services
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkuslabs-services
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
