target/kubernetes/openshift.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 6a98a5ecf56f66c012861a8ea0d148b98234e1b1
    app.quarkus.io/build-timestamp: 2023-03-06 - 14:42:11 +0000
  labels:
    app.kubernetes.io/name: quarkuslabs-services
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkuslabs-services
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: quarkuslabs-services
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 6a98a5ecf56f66c012861a8ea0d148b98234e1b1
        app.quarkus.io/build-timestamp: 2023-03-06 - 14:42:11 +0000
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: quarkuslabs-services
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
            - name: JAVA_OPTIONS
              value: ""
          image: hehernandez/quarkuslabs-services:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: quarkuslabs-services
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - quarkuslabs-services
        from:
          kind: ImageStreamTag
          name: quarkuslabs-services:1.0.0-SNAPSHOT
      type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 6a98a5ecf56f66c012861a8ea0d148b98234e1b1
    app.quarkus.io/build-timestamp: 2023-03-06 - 14:42:11 +0000
  labels:
    app.kubernetes.io/name: quarkuslabs-services
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkuslabs-services
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkuslabs-services
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 6a98a5ecf56f66c012861a8ea0d148b98234e1b1
    app.quarkus.io/build-timestamp: 2023-03-06 - 14:42:11 +0000
  labels:
    app.kubernetes.io/name: quarkuslabs-services
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkuslabs-services
spec:
  host: ""
  port:
    targetPort: http
  to:
    kind: Service
    name: quarkuslabs-services
